SET(TARGET_NAME "enigmagen")
SET(TARGET_DIR "../../")

INCLUDE_DIRECTORIES (../include)

# INCLUDE_DIRECTORIES(${BOOST_DIR}/include)
# LINK_DIRECTORIES(${BOOST_DIR}/lib)

# Build this app as a windows app or not:
SET(WINDOWS_APP TRUE)

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

IF(WINDOWS_APP)
ADD_DEFINITIONS(-DENIGMAGEN_WINDOWS)
ENDIF()

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )


IF(WINDOWS_APP)
ADD_EXECUTABLE (${TARGET_NAME} WIN32 ${PUBLIC_HEADERS} ${SOURCE_FILES} launcher.rc)
ELSE()
ADD_EXECUTABLE (${TARGET_NAME} ${PUBLIC_HEADERS} ${SOURCE_FILES} launcher.rc)
ENDIF()

COMPRESS_BINARY_TARGET()

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})
