SET(TARGET_NAME "enigmagen")
SET(TARGET_DIR "../../")

INCLUDE_DIRECTORIES (../include)

# INCLUDE_DIRECTORIES(${BOOST_DIR}/include)
# LINK_DIRECTORIES(${BOOST_DIR}/lib)

INCLUDE_DIRECTORIES(${LUA_DIR}/include)
LINK_DIRECTORIES(${LUA_DIR}/lib)

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

ADD_EXECUTABLE (${TARGET_NAME} ${PUBLIC_HEADERS} ${SOURCE_FILES} launcher.rc)

TARGET_LINK_LIBRARIES(${TARGET_NAME} lua51)

# COMPRESS_BINARY_TARGET()

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})
